theme.css
/* ... */
.is-phone {
  & .modal .modal-nav-action {
    top: 0.5rem;
  }
}
.is-phone .modal .modal-nav-action.mod-cta {
  color: var(--theme-color-controlText);
  right: 1rem;
}
.is-phone .modal .modal-nav-action.mod-secondary {
  left: 1rem;
}
.is-phone .mod-confirmation .modal .modal-title {
  border-bottom: none;
}
.is-phone.theme-setting-mobileCardsUI .modal.mod-lg .modal-close-button,
.is-phone.theme-setting-mobileCardsUI
  .modal.mod-sidebar-layout
  .modal-close-button {
  top: 0.5rem;
}
.is-phone.theme-setting-mobileCardsUI
  .modal.mod-sidebar-layout
  .modal-setting-back-button {
  top: 0.5rem;
  left: 1.5rem;
  padding: 0;
}
.is-phone.theme-setting-mobileCardsUI .community-modal-search-summary {
  padding: 0;
}
.is-phone .modal.mod-community-modal .modal-content .modal-sidebar {
  padding: 0;
}
.is-phone .mod-community-modal .community-modal-controls {
  padding: 1em;
}
/* #region   Mobile scaling */
/* Scale background elements smaller than foreground */
body.is-phone.theme-setting-mobileCardsUI:has(.modal-container)
  .workspace
  > .mod-root
  .mod-active,
body.is-phone.theme-setting-mobileCardsUI:has(.workspace-drawer)
  .workspace
  > .mod-root
  .mod-active {
  transition: transform 0.5s ease-in-out;
  transform: scale(0.95) translateY(-1.5rem);
}
body.is-phone.theme-setting-mobileCardsUI:not(
    :has(.modal-container:focus-within)
  ):not(:has(.modal))
  .workspace
  > .mod-root
  .mod-active {
  transition: transform 0.5s ease-in-out;
  transform: scale(1) translateY(0);
}
body.is-phone.theme-setting-mobileCardsUI:has(.modal-container)
  .workspace
  > .mod-root
  .mod-active
  .view-header-title-container {
  border-top-left-radius: var(--tab-radius);
  border-top-right-radius: var(--tab-radius);
}
body.is-phone.theme-setting-mobileCardsUI:has(.modal-container)
  .workspace
  > .mod-root
  .mod-active
  .view-content {
  border-bottom-left-radius: var(--tab-radius);
  border-bottom-right-radius: var(--tab-radius);
}
.is-phone.is-phone.theme-setting-mobileCardsUI .modal-container {
  padding: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
}
.is-phone.theme-setting-mobileCardsUI .mod-confirmation .modal {
  left: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  right: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  width: min(
    calc(
      100vw - 2 * var(--theme-spacing-mobileHorizontalSpacing),
      calc(100vw - 1rem)
    )
  );
}
/* Style similarly to mobile prompt */
.is-phone.theme-setting-mobileCardsUI .modal.mod-sidebar-layout {
  width: min(
    calc(
      100vw - 2 * var(--theme-spacing-mobileHorizontalSpacing),
      calc(100vw - 1rem)
    )
  );
  margin-right: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  margin-left: max(calc(var(--theme-spacing-mobileHorizontalSpacing)), 0.5rem);
  margin-top: calc(var(--safe-area-inset-top) + var(--header-height) + 1em);
  border-radius: var(--radius-l) var(--radius-l) 0 0;
}
/* #endregion */
/* #region   Mobile toolbar */
.mobile-toolbar {
  background-color: var(--theme-color-mobileToolbarBg);
}
.mobile-toolbar-options-container.mod-fade:not(.mod-at-start):before,
.mobile-toolbar-options-container.mod-fade:not(.mod-at-end):after {
  background-color: var(--theme-color-mobileToolbarBg);
  background-position: 50% 50%;
  background-repeat: no-repeat;
  height: var(--mobile-toolbar-height);
  line-height: 1em;
  margin: 0;
  top: 0;
  width: 0.5rem;
}
.mobile-toolbar-options-container.mod-fade:not(.mod-at-start):before {
  background-image: url('data:image/svg+xml; utf8, <svg width="8px" height="32px" viewBox="0 0 8 32" xmlns="http://www.w3.org/2000/svg" stroke="rgba(0,0,0,0.25)" fill="none" stroke-width="2"><path d="M7,1L1,16L7,31"/></svg>');
  content: "";
  left: 0;
}
.mobile-toolbar-options-container.mod-fade:not(.mod-at-end):after {
  background-image: url('data:image/svg+xml; utf8, <svg width="8px" height="32px" viewBox="0 0 8 32" xmlns="http://www.w3.org/2000/svg" stroke="rgba(0,0,0,0.25)" fill="none" stroke-width="2"><path d="M1,1L7,16L1,31"/></svg>');
  content: "";
  right: var(--toolbar-option-width);
}
/* #endregion */
/* #endregion */

/* #region Menus */
/* Rendered on mobile, or if native menus are disabled */
.menu {
  background-color: var(--theme-color-menuBg);
  border: 0;
  box-shadow: var(--shadow-l);
  border-radius: var(--radius-l);
  margin: 0 1rem;
  padding: 0.5em;
}
.is-phone .menu {
  padding: 0.5rem 0.5rem var(--safe-area-inset-bottom) 0.5rem;
  width: calc(
    100% - var(--safe-area-inset-left) - var(--safe-area-inset-right) - 2 *
      var(--theme-spacing-mobileHorizontalSpacing) -
      max(2 * var(--theme-spacing-mobileHorizontalSpacing), 1rem)
  );
}
.menu-item {
  height: 2em;
}
.menu-item,
.menu-item-icon {
  color: var(--nav-item-color);
  background-color: var(--nav-item-background);
}
.menu-item.selected:not(.is-label):not(.is-disabled) {
  background-color: var(--nav-item-background);
  border-radius: var(--radius-s);
  box-shadow: 0 0 0 2px var(--background-modifier-border-focus);
}
.menu-item.selected:not(.is-label):not(.is-disabled):hover {
  background-color: var(--nav-item-background-hover);
}
.menu-separator {
  margin: 0.75em 0.5em;
}
@media (hover: hover) {
  .menu-item:hover {
    color: var(--nav-item-color-hover);
    background-color: var(--nav-item-background-hover);
    font-weight: var(--nav-item-weight-hover);
  }
  .menu-item:hover .menu-item-icon {
    color: var(--nav-item-color-hover);
  }
}
/* #endregion */
/* #region Messages */

.mod-warning,
p.mod-warning,
.setting-message {
  border-radius: var(--clickable-icon-radius);
  font-size: var(--font-ui-small);
  background: var(--theme-color-warningBg);
  padding: 0.5em 1em;
}
.mod-warning:not(button) {
  display: inline-block;
  margin: 0.5em 0;
  border: solid var(--text-error) 0.125em;
}
/* ... */

